# multi-robot-path-planning

./: .gitignore  README.md  activate_robot0.sh  pyproject.toml  test.sh
results/: search_metrics_big_office.csv  search_metrics_world_1.csv  search_metrics_world_2.csv  search_metrics_world_3.csv
scripts/: draw_graph_on_map.py  map_generator.py  overlay_graph_on_map.py  plot_search_metrics.py  prune_graph_gml.py
src/: commands.txt
src/mr_path_planning/: package.xml  setup.cfg  setup.py
src/mr_path_planning/config/: nav2_params.yaml  nav2_params_multi.yaml  nav2_params_robot_0.yaml  nav2_params_robot_1.yaml  slam_toolbox.yaml  slam_toolbox_polkadot.yaml
src/mr_path_planning/launch/: demo.launch.py  graf201.launch.py  nav2_minimal.launch.py  nav2_multi.launch.py  nav2_polkadot.launch.py  nav2_polkadot_multi.launch.py  nav2_polkadot_slam.launch.py  polkadot.launch.py  rviz.launch.py  stage.launch.py
src/mr_path_planning/mr_path_planning/: exhaustive_graph_search.py  graph_visualizer.py  map_generator.py  milp_graph_search.py  my_node.py  realtime_graph_visualizer.py  robot_markers.py  search_metrics_logger.py  target_graph_uniform.py
src/mr_path_planning/world/: big_office.world  graf201.world  hospital.world  more_office.world  my_office.world  polkadot.world  world_1.world  world_2.world  world_3.world
src/search_and_capture_algo/: README.md  animate_existing_results.py  animate_results.py  benchmark_configs.py  requirements.txt  visualize_interactive.py
src/search_and_capture_algo/code/: helper.py  main.py  searchers.py  target.py
(+25 files in other folders)
