[project]
name = "multi-robot-path-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empy>=4.2.1",
    "gurobipy>=13.0.1",
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "python-igraph>=1.0.0",
]
